; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_log.c_av_vlog.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_log.c_av_vlog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @av_vlog(i8* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca void (i8*, i32, i8*, i32)*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  store void (i8*, i32, i8*, i32)* @av_log_callback, void (i8*, i32, i8*, i32)** %9, align 8
  %10 = load void (i8*, i32, i8*, i32)*, void (i8*, i32, i8*, i32)** %9, align 8
  %11 = icmp ne void (i8*, i32, i8*, i32)* %10, null
  br i1 %11, label %12, label %18

12:                                               ; preds = %4
  %13 = load void (i8*, i32, i8*, i32)*, void (i8*, i32, i8*, i32)** %9, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = load i8*, i8** %7, align 8
  %17 = load i32, i32* %8, align 4
  call void %13(i8* %14, i32 %15, i8* %16, i32 %17)
  br label %18

18:                                               ; preds = %12, %4
  ret void
}

declare dso_local void @av_log_callback(i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
